# prescansimcppgenerator

./: ObjectParser.py  ObjectsSensorsParser.py  README.md  README_cn.md  SimcppGenerator.py  main.py  remote.txt  sad.py  set_env.bash  set_env.bat
bridgedemos/cppbridge/: CMakeLists.txt  main.cpp  run.bash  run.bat  set_env.bat
bridgedemos/cppbridge/.vscode(for vscode)/: settings.json
bridgedemos/cppbridge/bridge/: CMakeLists.txt
bridgedemos/cppbridge/bridge/bridge_base/: CMakeLists.txt  bridge_base.hpp
bridgedemos/cppbridge/bridge/bridge_msgs/basic_msgs/: geometry.pb.cc  header.pb.cc
bridgedemos/cppbridge/bridge/bridge_msgs/chassis_msgs/: chassis.pb.h
bridgedemos/cppbridge/bridge/bridge_msgs/localiztion_msgs/: localization.pb.cc  localization.pb.h
bridgedemos/cppbridge/bridge/bridge_msgs/perception_msgs/: obstacle.pb.h
bridgedemos/proto_msgs/: CMakeLists.txt  build.bat  protoc_modules_genration.py
bridgedemos/proto_msgs/bridge_msgs/basic_msgs/: geometry.proto  header.proto
bridgedemos/proto_msgs/bridge_msgs/chassis_msgs/: chassis.proto
bridgedemos/proto_msgs/bridge_msgs/control_msgs/: control_cmd.proto
bridgedemos/proto_msgs/bridge_msgs/localiztion_msgs/: localization.proto
bridgedemos/proto_msgs/bridge_msgs/sensor_msgs/: image.proto  pointcloud.proto
bridgedemos/proto_msgs/proto_msgs/bridge_msgs/basic_msgs/: geometry.proto
bridgedemos/proto_msgs/proto_msgs/bridge_msgs/control_msgs/: control_cmd.proto
bridgedemos/proto_msgs/proto_msgs/bridge_msgs/localiztion_msgs/: localization.proto
bridgedemos/proto_msgs/proto_msgs/bridge_msgs/perception_msgs/: obstacle.proto
bridgedemos/proto_msgs/proto_msgs/bridge_msgs/sensor_msgs/: image.proto
bridgedemos/pybridge/: main.py
bridgedemos/pybridge/datatype/: __init__.py
bridgedemos/pybridge/shmtypes/: bridge_shm.py
bridgedemos/simcpp/: CMakeLists.txt  build.bat  run.bat  set_env.bat
generator/: AirGenerator.py  AlmsGenerator.py  AmesimDynamicsGenerator.py  CameraGenerator.py  FullwaveformlidarGenerator.py  LmsGenerator.py  MetaGenerator.py  PCSGenerator.py  PhysicsbasedcameraunrealGenerator.py  PointcloudlidarGenerator.py  SelfUnitGenerattor.py  StateActuatorGenerator.py  TrajectoryGenerator.py  __init__.py
generators/: AirGenerator.py  AlmsGenerator.py  AmesimDynamicsGenerator.py  BrsGenerator.py  CameraGenerator.py  DepthcameraGenerator.py  FullwaveformlidarGenerator.py  IssGenerator.py  LmsGenerator.py  PCSGenerator.py  PathFollowerGenerator.py  PhysicsbasedcameraunrealGenerator.py  PointcloudlidarGenerator.py  SelfUnitGenerattor.py  StateActuatorGenerator.py  TrajectoryGenerator.py  __init__.py
libs/PathFollower/: cnpy.h  config.h  getUserData.h  pathfollower.h  utils.h
libs/PathFollower/conf/: pids.conf.txt  speeds.conf.txt
libs/PathFollower/scripts/: Define.py  PreScanBox.py  getSingleCollisionPoint.py  setUserDate.py
libs/Visualizationtools/: CMakeLists.txt  build.bash  build.bat  main.cpp  set_env.bash  set_env.bat
libs/Visualizationtools/cmake/: VisualizationtoolsConfig.cmake
libs/Visualizationtools/inc/: visualizationtools.h
libs/Visualizationtools/install/lib/: visualizationtools.lib  visualizationtoolsd.lib
libs/Visualizationtools/src/: visualizationtools.cpp
logger/: UserLog.py  __init__.py  config.yaml
matstruct2yaml/: demo.m
prescandemos/SimcppGenerator/: SimcppGenerator.pb  SimcppGenerator.pepb  SimcppGenerator.pex  configCamera.m  prescan.prof
prescandemos/SimcppGenerator/ALMSConfig/: ALMSAssignments.xml
prescandemos/SimcppGenerator/Aimsun/: AimsunPlugin.xml
prescandemos/SimcppGenerator/CameraSensorConfig/: CameraSensorAssignments.xml
prescandemos/SimcppGenerator/Migrated/: SimcppGenerator.pex.2023.1.0  SimcppGenerator_202310.pepb  SimcppGenerator_cs_202310.slx
prescandemos/SimcppGenerator/Models/: ExperimentDB.psdb  generated.md5
prescandemos/SimcppGenerator/SUMO/: SUMOPlugin.xml
prescandemos/SimcppGenerator/Temp/: SimcppGenerator.swi  SimcppGenerator.vwo
prescandemos/SimcppGenerator/V2XPlugin/: configuration.xml
prescandemos/SimcppGenerator/Vissim/: VissimPlugin.xml
prescandemos/SimcppGenerator/simcpp/: CMakeLists.txt  build.bat  run.bat  set_env.bash  set_env.bat
projects/: CMakeLists.txt  build.bat  run.bat  set_env.bat
projects/simmodel/sensorsdemux/: demux_alms.h  demux_lms.h  demux_pcl.h  demux_pcsRange.h
projects/simmodel/simmodel/: simmodel.h
projects/simmodel/utils/: printsteptime.h
projects/simmodel/worldobjects/: Audi_A3_1.h  DAF_95_XF.h  Honda_Pan_European_Motorcycle_With_Driver_1.h  MercedesBenz.h  Skywell_1.h  objectsprovider.h  printsteptime.h  worldobject.h
rename_api_namespace/: __init__.py  prescan_python_dmapi.py  prescan_python_dmapi_template.py  rename_api_namespace.py  simcpp_api.py
scripts/: demux_cameraBGRU8.h  plot_alms.py  plot_lms.py
sensors/: Air.py  Alms.py  AmesimDynamics.py  Brs.py  Camera.py  Depthcamera.py  Fullwaveformlidar.py  Iss.py  Lms.py  MetaSensor.py  PathFollower.py  Pcs.py  Physicsbasedcameraunreal.py  Pointcloudlidar.py  SelfUnit.py  StateActuator.py  Trajectory.py  __init__.py
simcpp/: CMakeLists.txt  build.bash  run.bash  run.bat
simcpp/simmodel/worldobjects/: MercedesBenz.h
simcppbridge/proto_msgs/: protoc_modules_genration.py  readme.md
simcppbridge/pybridge/: main.py
simcppbridge/simcpp/: CMakeLists.txt  set_env.bash
templates/PathFollower/: types.h
templates/sensorsdemux/: demux_Iss.h  demux_air.h  demux_alms.h  demux_amesim.h  demux_brs.h  demux_cameraBGRU8.h  demux_cameraSimulinkU8.h  demux_depthcamera.h  demux_fwl.h  demux_pbc.h  demux_pcl.h  demux_pcsPosition.h  demux_pcsRange.h  demux_selfunit.h
templates/simcpp/: CMakeLists.txt  build.bash  build.bat  run.bash  run.bat  set_env.bash  set_env.bat
templates/simcpp/simmodel/: main.cpp
templates/simcpp/simmodel/sensorsdemux/: dependency.h
templates/simcpp/simmodel/simmodel/: simmodel.h
templates/simcpp/simmodel/utils/: threadpool.h
templates/simcpp/simmodel/worldobjects/: collisondetection.h  worldobject.h
utils/: __init__.py  config_python_api.py  load_modules.py
(+504 files in other folders)
